--- a/ftdi.cabal
+++ b/ftdi.cabal
@@ -5,7 +5,7 @@ build-type:    Custom
 stability:     experimental
 author:        Roel van Dijk <vandijk.roel@gmail.com>
 maintainer:    Roel van Dijk <vandijk.roel@gmail.com>
-copyright:     2009—2011 Roel van Dijk <vandijk.roel@gmail.com>
+copyright:     (c) 2009, 2010 Roel van Dijk
 license:       BSD3
 license-file:  LICENSE
 category:      System
@@ -15,8 +15,8 @@ description:
   implemented as a lightweight wrapper around the usb library.
 
 source-repository head
-  type:     git
-  location: git://github.com/roelvandijk/ftdi.git
+  type:     darcs
+  location: http://code.haskell.org/~roelvandijk/code/ftdi
 
 -------------------------------------------------------------------------------
 
@@ -39,12 +39,12 @@ library
   exposed-modules: System.FTDI
   other-modules: System.FTDI.Internal
                , System.FTDI.Utils
-  build-depends: base                 >= 3.0.3 && < 4.3
-               , base-unicode-symbols >= 0.1.1 && < 0.3
-               , bytestring           >= 0.9.1 && < 0.10
-               , safe                 >= 0.2   && < 0.3
-               , transformers         >= 0.2   && < 0.3
-               , usb                  >= 0.3   && < 0.4
+  build-depends: base                 >= 4.0   && < 4.8
+               , bytestring           >= 0.10  && < 0.11
+               , safe                 >= 0.2   && < 0.4
+               , transformers         >= 0.2   && < 0.5
+               , usb                  >= 1.2   && < 1.3
+               , vector               >= 0.10  && < 0.11
   ghc-options: -Wall
 
   if flag(nolib)
