--- a/ftdi.cabal
+++ b/ftdi.cabal
@@ -45,6 +45,8 @@ library
                , transformers         >= 0.2   && < 0.5
                , usb                  >= 1.2   && < 1.3
                , vector               >= 0.10  && < 0.11
+               , mtl                  >= 2.0
+               -- , errors               >= 1.3   && < 1.4 
   ghc-options: -Wall
 
   if flag(nolib)
